--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  publish = "dist"
+  publish = "khalwale-&-co-advocates-ip-division/dist"
   command = "npm run build"
   base = "khalwale-&-co-advocates-ip-division"
